Removed unnecessary elements to DOM.

--- a/src/components/ToDo/ToDoList.css
+++ b/src/components/ToDo/ToDoList.css
@@ -13,7 +13,10 @@ li {
   border-radius: 6px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+}
+
+.btn_ml {
+  margin-left: 65%;
 }
 
 button {
